fix(Pre): Fix long line-lenghts breaking out of containers

--- a/packages/style-stencila/src/atoms/pre.css
+++ b/packages/style-stencila/src/atoms/pre.css
@@ -1,4 +1,4 @@
 .tag-pre,
 pre {
-  @apply border border-solid border-neutral-300 rounded p-2 m-2;
+  @apply border border-solid border-neutral-300 rounded p-2 m-2 overflow-auto;
 }
